--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs"]
 	path = libs
 	url = https://github.com/Nall-chan/SymconModulHelper
+[submodule "libs/SymconModulHelper"]
+	path = libs/SymconModulHelper
+	url = https://github.com/Nall-chan/SymconModulHelper
