--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".style"]
 	path = .style
 	url = https://github.com/symcon/StylePHP.git
+[submodule "libs/vendor/SymconModulHelper"]
+	path = libs/vendor/SymconModulHelper
+	url = https://github.com/Schnittcher/SymconModulHelper
