--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule ".style"]
 	path = .style
-	url = https://github.com/symcon/StylePHP.git
+	url = https://github.com/Schnittcher/StylePHP.git
 [submodule "libs/vendor/SymconModulHelper"]
 	path = libs/vendor/SymconModulHelper
 	url = https://github.com/Schnittcher/SymconModulHelper
